style: fix game card alignment - equal height, centered layout

--- a/front-end/src/Style/home.css
+++ b/front-end/src/Style/home.css
@@ -64,24 +64,25 @@ img {
     padding: 30px 15px;
     border-radius: 23px;
     margin-bottom: 30px;
-  }
-  
-  .most-popular .item .item {
-    padding: 0px;
-    border-radius: 0px;
-    background-color: transparent;
-    margin-bottom: 0px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    min-height: 400px;
   }
   
   .most-popular .item img {
     border-radius: 23px;
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    display: block;
   }
   
   .most-popular .item h4 {
     font-size: 15px;
     margin-top: 20px;
     margin-bottom: 0px;
-    display: inline-block;
+    display: block;
   }
   
   .most-popular .item span {
@@ -92,12 +93,15 @@ img {
   }
   
   .most-popular .item ul {
-    float: right;
-    margin-top: 20px;
+    margin-top: auto;
+    margin-bottom: 0px;
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    padding: 0;
   }
   
   .most-popular .item ul li {
-    text-align: right;
     color: #fff;
     font-size: 14px;
   }
